[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geomloss"
dynamic = ["version"]
description = "Geometric loss functions between point clouds, images and volumes."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
authors = [
  { name = "Jean Feydy", email = "jean.feydy@inria.fr" }
]
license = "MIT"
keywords = ["kernels", "optimal transport", "measure", "loss", "geometry"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "numpy",
  "scipy",
  "torch",
]

[project.optional-dependencies]
full = [
  "pykeops",
]

[dependency-groups]
test = [
  "black",
  "flake8",
  "hypothesis",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-check",
  "pytest-sphinx @ git+https://github.com/jeanfeydy/pytest-sphinx.git",
]
docs = [
  "recommonmark",
  "furo",
  "myst_parser>=0.13",
  # To generate GIFs
  "imageio",
  # Sphinx + theme/plugins
  "sphinx>=4.0",
  "sphinx-autodoc-typehints",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-gallery<= 0.15.0",
  "sphinx-math-dollar",
  "sphinx-rtd-theme",
  # To generate interactive scenes
  "ipython",
  "jupyterlab",
  "trame",
  "trame_vtk",
  "trame_vuetify",
  "trimesh",
  "rtree",
]
dev = [
  { include-group = "test" },
  { include-group = "docs" },
]

[project.urls]
Homepage = "https://www.kernel-operations.io/geomloss/"

[tool.setuptools]
packages = ["geomloss"]

[tool.setuptools.dynamic]
version = { attr = "geomloss.__version__" }
